Fix spacing between start a discussion and thread list

--- a/client/components/messaging/thread-list/thread-list.scss
+++ b/client/components/messaging/thread-list/thread-list.scss
@@ -8,5 +8,5 @@
 
 .thread-button {
     margin-left: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
